--- a/style.css
+++ b/style.css
@@ -8,18 +8,22 @@
     color: #03a9f4;
 }
 
-body{
+.principal{
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
     background: #1f2028;
+    margin-bottom: 0;
 }
-.color-fondo{
-    position: absolute;
-    display:block;
-    margin-bottom: 20px;
+.contenido{
+    margin-top: 0;
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
     background-color: rgb(56,132,252);
 }
 
