--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    color: #03a9f4;
 }
 
 .principal{
@@ -16,16 +15,72 @@
     min-height: 100vh;
     background: #1f2028;
     margin-bottom: 0;
+    margin-right: 0;
 }
-.contenido{
-    margin-top: 0;
+
+.tarjetas{
     display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: rgb(56,132,252);
+    background: rgb(56,132,252);
 }
+.contenedor{
+    position: relative;
+    width: 1100px;
+    height: 400px;
+}
+
+.contenedor .card{
+    position: absolute;
+    top: 30%;
+    left:50%;
+    transform: translate(-50%, calc(100px *var(--i))) rotate(40deg) skew(-20deg,-10deg);
+    width:300px;
+    height: 400px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 25px 25px 100px rgba(0,0, 0, 0.2);
+    z-index: calc(-1 * var(--i));
+    transition: 0.5s;
+}
+
+.contenedor .card:nth-child(1){
+    opacity: 1;
+}
+.contenedor .card:nth-child(2){
+    opacity: 0.8;
+}
+.contenedor .card:nth-child(3){
+    opacity: 0.6;
+}
+.contenedor:hover .card {
+    position: absolute;
+    top: 50%;
+    left:80%;
+    z-index: 1;
+    opacity: 1;
+    box-shadow: 0px 25px 50px rgba(0,0, 0, 0.2);
+    transform: translate(calc(-50% + calc(350px*var(--i))),-50%) rotate(0deg) skew(0deg,0deg);
+   
+}
+
+.contenedor .card .contenido{
+    color: #444;
+    opacity: 0;
+    transition: 0.5s;
+    transform: translateY(50px);
+    padding: 25px;
+    text-align: center;
+}
+
+.contenedor:hover .card .contenido{
+    opacity: 1;
+    transform:translateY(0px);
+}
+
 
 section{
     position: relative;
@@ -33,7 +88,6 @@ section{
 }
 section .olas{
     position: relative;
-    margin-bottom: 5px;
 }
 
 section .olas .ola{
@@ -73,10 +127,11 @@ section .olas .ola#ola4{
     animation: animate2 2s linear infinite;
 }
 
-.cielo{
+.cielo {
     position: absolute;
-    bottom:0;
+    bottom: 0;
     height: 100vh;
+    width: 100%; 
     pointer-events: none;
     mix-blend-mode: screen;
 }
@@ -113,6 +168,28 @@ h2:nth-child(2){
     bottom: 0;
     pointer-events: none;
 }
+
+.proyectos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:  rgb(56,132,252);
+
+}
+h1{
+    text-align: center;
+    font-size: 4em;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #d4dee6;
+    margin-top: 20%;
+}
+h1:hover{
+    cursor: pointer;
+    transform: translateX(10px); /* Cambia la posición horizontal en 10 píxeles cuando se realiza hover */
+    transition: transform 0.3s ease;
+}
+
 
 @keyframes animate{
     0%{
