--- a/style.css
+++ b/style.css
@@ -6,16 +6,22 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; /* Evita la barra de desplazamiento horizontal */
+}
 
-.principal{
+.principal {
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
     background: #1f2028;
-    margin-bottom: 0;
-    margin-right: 0;
+    margin: 0;
+    padding: 0;
+    position: relative; /* Añade posición relativa al contenedor principal */
 }
 
 .tarjetas{
@@ -184,13 +190,14 @@ h2:nth-child(2){
     pointer-events: none;
 }
 
-.proyectos{
+.proyectos, .tec{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color:  rgb(56,132,252);
 
 }
+
 h1{
     text-align: center;
     font-size: 3em;
@@ -205,7 +212,7 @@ h1{
 
 .contenedor-submarino{
     width: 100%; /* Asegura que la imagen cubra todo el ancho de la ventana */
-    height: 100vh; 
+    height: auto; 
     background-color: rgb(56,132,252);
 }
 .submarino{
@@ -216,6 +223,64 @@ h1{
     cursor: pointer;
     transform: translateX(10px);  Cambia la posición horizontal en 10 píxeles cuando se realiza hover 
 }**/
+
+.contenedor-skills {
+    text-align: center;
+    font-size: 1.2rem;
+    background-color: rgb(56,132,252);
+}
+
+.columna-skills {
+    display: inline-block; 
+    margin: 10px;
+    text-align: center;
+}
+
+
+.columna-skills img {
+    width: auto; 
+    height: 170px;
+    animation: animateText 5s linear infinite; 
+}
+
+
+.ondeado{
+    position: relative;
+    -webkit-box-reflect: below -12 px linear-gradient(trasparent, rgba(0,0,0,0.2));
+    padding-top: 15%;
+    padding-bottom: 10%;
+}
+.ondeado span{
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    font-size: 3em;
+    font-weight: 800;
+    text-transform: uppercase;
+    animation: animateonda 4s ease-in-out infinite;
+    animation-delay: calc(0.1s*var(--i));
+}
+.proyectos p{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 0 30px;
+    padding-top: 80px;
+    color: #fff;
+    font-size: 1em;
+}
+
+@keyframes animateonda {
+    0%{
+        transform: translateY(0px);
+    }
+    20%{
+        transform: translateY(-20px);
+    }
+    40%, 100%{
+        transform: translateY(0px);
+    }
+}
 
 @keyframes animateText{
     0%{
