--- a/style.css
+++ b/style.css
@@ -332,7 +332,11 @@ h1{
     justify-content: center;
     position: relative; 
 }
-
+.email p{
+    color: #fff;
+    justify-content: center;
+    padding-bottom: 20px;
+}
 .contenedor-iconito i {
     color: #fff;
     font-size: 4rem;
